--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s-is-for-store",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A no frills state container written in TypeScript.",
   "main": "lib/index.js",
   "author": "Grant Heath",
@@ -11,7 +11,8 @@
     "url": "https://github.com/heathgr/s-is-for-store.git"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "publish": "tsc"
   },
   "types": "lib/index.d.ts",
   "files": [
