--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "state",
     "store",
     "subscriber",
-    "predictable",
     "immutable",
-    "functional"
+    "functional",
+    "promise",
+    "async"
   ],
   "devDependencies": {
     "ts-jest": "^23.10.5",
