--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,6 +15,7 @@ jobs:
       with:
         node-version: 10.0.0
     - run: npm install
+    - run: npm build
     - run: npm test
     - run: npm publish
       env:
