--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/setup-node@master
       with:
         node-version: 10.0.0
-    - run: npm install
+    - run: npm ci
     - run: npm run-script build
     - run: npm test
     - run: npm publish
