--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         node-version: 10.0.0
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     - name: Build Package
       run: npm run-script build
     - name: Test
