--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,6 +14,7 @@ jobs:
       uses: actions/setup-node@master
       with:
         node-version: 13.2.0
+        registry-url: 'https://registry.npmjs.org'
     - name: Install dependencies
       run: npm install
     - name: Build Package
@@ -25,4 +26,3 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-        CI: true
